src/test/ui/feature-gates/feature-gate-exclusive-range-pattern.stderr
error[E0658]: exclusive range pattern syntax is experimental (see issue #37854)
  --> $DIR/feature-gate-exclusive-range-pattern.rs:3:9
   |
LL |         0 .. 3 => {}
   |         ^^^^^^
   |
   = help: add #![feature(exclusive_range_pattern)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
